--- a/src/vagrantFiles/Vagrantfile
+++ b/src/vagrantFiles/Vagrantfile
@@ -63,15 +63,18 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  config.vm.provision "shell", inline: <<-SHELL
-    apt-get update
-    apt-get install -y apache2
-    apt-get install -y python3
-    apt-get install -y git
-    apt list --upgradable
-    sudo apt-get install -y python3-pip
-    python3 -m pip install kafka-python, boto3, yahoo_fin
-    git clone https://github.com/bingxuanying/DataPipeline.git
-    python3 .\DataPipeline\src\producers\producer_amzn.py
-  SHELL
+  config.vm.provision "shell", 
+    inline: <<-SHELL
+      apt-get update
+      apt-get install -y apache2
+      apt-get install -y python3
+      apt-get install -y git
+      apt list --upgradable
+      sudo apt-get install -y python3-pip
+      python3 -m pip install kafka-python
+      python3 -m pip install boto3
+      python3 -m pip install yahoo_fin
+      git clone https://github.com/bingxuanying/DataPipeline.git
+      python3 /home/vagrant/DataPipeline/src/producers/producer_amzn.py
+    SHELL
 end
